--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "qrcode": "^1.5.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "qrcode": "^1.5.4",
